fixed alignment

--- a/css/freelancer.css
+++ b/css/freelancer.css
@@ -396,7 +396,7 @@ footer .footer-below {
     min-height: 100%;
     border: 0;
     border-radius: 0;
-    text-align: left;
+    text-align: center;
     background-clip: border-box;
     -webkit-box-shadow: none;
     box-shadow: none;
